# PKS_method

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  Graph.py  MarkovChain.py  README.md  Stat.py  Swap.py  count_3chain.py  count_edege.py  count_square.py  count_triangles.py  diagnose_variance.py  find_trange.py  generate_hypergraph.py  gp_references.txt  new_acf_test.py  ploting.py  pyproject.toml  setup.py  test.py  test_5node_graph.py  test_autocorrelation.py  test_local_graph.py  test_run.py
data/ucidata-zachary/: convertgml.py  egograph_edges.txt  random_egograph.gml  toyexample.out
doc/source/: benchmark.rst  conf.py  contents.rst  development.rst  index.rst  installation.rst  requirements.txt  usage.rst
doc/source/python/: MarkovChain.rst  Stat.rst  index.rst
kedgeswap/: Graph.py  MarkovChain.py  Stat.py  __init__.py  main.py
results/: profiling_newcount_ego4a61  profiling_newcountoftriangle
testing_files/: count_3chain.py  count_edege.py  count_triangles.py  ploting.py  test_local_graph.py
tests/: handcrafted.tsv  handcrafted_directed.tsv  japanese_macaques.tsv  test.py
