[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kedgeswap"
version = "1.1.0"
authors = [
    {name ="Lionel Tabourier",
        email= "email@hisemail.com"},
    {name="Julien Karadayi",
        email="email@hisemail.com"}
]
description = "Python code to generate uniformly at random graphs obeying a given set of constraints."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pytest",
    "arch",
    "progressbar",
    "joblib",
    "ipdb"
]

[project.urls]
"Homepage" = "https://gitlab.lip6.fr/tabourier/code-pks-generation/"
"Bug Tracker" = "https://gitlab.lip6.fr/tabourier/code-pks-generation/-/issues"
